objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>FinServ__Lead Process</fullName>
        <description>Consumer lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Nurturing - Contacted</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Referral Process</fullName>
        <description>Referral Status</description>
        <isActive>true</isActive>
        <values>
            <fullName>New - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New - Overdue</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Qualified - Converted</fullName>
        </values>
        <values>
            <fullName>Qualified - Not Converted</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <formula>NOW()</formula>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF(  FinServ__ReferredByUser__c = $User.Id,True,False)</formula>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Employer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpressedInterest__c</fullName>
        <label>Expressed Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__ProductList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this Referral rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Referrals</relationshipLabel>
        <relationshipName>HouseholdReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PotentialValue__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Referrals</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadUserReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <description>Referrer score from internal/external referrer</description>
        <formula>IF(NOT(ISBLANK(FinServ__ReferredByUser__c)),FinServ__ReferredByUser__r.FinServ__ReferrerScore__c,IF(NOT(ISBLANK(FinServ__ReferredByContact__c)),FinServ__ReferredByContact__r.FinServ__ReferrerScore__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>RelatedLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_phone__c</fullName>
        <formula>MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_LOB__c</fullName>
        <description>This field is created as part of reports. If the logged in user&apos;s LOB is equal to REFERRED BY user&apos;s LOB, display only those records</description>
        <formula>IF ( TEXT( FinServ__ReferredByUser__r.WT_Line_of_Business__c ) =  TEXT( $User.WT_Line_of_Business__c )  , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User LOB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Account_Referred_Email__c</fullName>
        <description>This field is used to map the Account Email based on RecordType. This field is used in BeforeTrigger on Referral Object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Referred Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Account_Referred_Text__c</fullName>
        <description>This field is to populate the Account Name on Referral Compact Layout.</description>
        <formula>IF(OR(FinServ__RelatedAccount__r.RecordType.DeveloperName = &apos;PersonAccount_Customer&apos;,FinServ__RelatedAccount__r.RecordType.DeveloperName = &apos;PersonAccount_Prospect&apos;),  
FinServ__RelatedAccount__r.FirstName &amp; &quot; &quot; &amp; FinServ__RelatedAccount__r.LastName, &quot;&quot;)
&amp; IF(OR(FinServ__RelatedAccount__r.RecordType.DeveloperName = &apos;BusinessAccount_Customer&apos; , 
FinServ__RelatedAccount__r.RecordType.DeveloperName = &apos;BusinessAccount_Prospect&apos;), FinServ__RelatedAccount__r.Name, &apos;&apos;)</formula>
        <label>Account Referred</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Amount_Bank_Funded__c</fullName>
        <label>Amount Bank Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Amount_Funded__c</fullName>
        <label>Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Amount_Referred__c</fullName>
        <label>Amount Referred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Approximate_Financial_Assets__c</fullName>
        <label>Approximate Financial Assets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0-$49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>$200,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 - $999,999</fullName>
                </value>
                <value>
                    <fullName>$1,000,000 - $4,999,999</fullName>
                </value>
                <value>
                    <fullName>$5,000,000 - $9,999,999</fullName>
                </value>
                <value>
                    <fullName>$10,000,000 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Charter_Factor__c</fullName>
        <formula>WT_Referral_Business_Unit__r.WT_WM_Charter_Factor__c</formula>
        <label>Charter Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Charter__c</fullName>
        <formula>WT_Referral_Business_Unit__r.WT_Charter__c</formula>
        <label>Charter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Created_To_Me__c</fullName>
        <description>Check if Referred To  is  equals to Current user or Not</description>
        <formula>IF (WT_Referred_To__c = $User.Id,True,False)</formula>
        <label>Created To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Date_Funded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Funded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Date_Paid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Date_Qualified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Date_Referred__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Referred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Investment_Amount__c</fullName>
        <label>Investment Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0-$49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>$200,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 - $999,999</fullName>
                </value>
                <value>
                    <fullName>$1,000,000 - $4,999,999</fullName>
                </value>
                <value>
                    <fullName>$5,000,000 - $9,999,999</fullName>
                </value>
                <value>
                    <fullName>$10,000,000 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Investment_Time_Horizon__c</fullName>
        <label>Investment Time Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intermediate (3-5 yrs.)</fullName>
                </value>
                <value>
                    <fullName>Long-Term (10+ yrs.)</fullName>
                </value>
                <value>
                    <fullName>Moderate (5-10 yrs.)</fullName>
                </value>
                <value>
                    <fullName>Short-Term (less than 3 yrs.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Last_Modified_Date__c</fullName>
        <description>Modified On*</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Modified On*</inlineHelpText>
        <label>Modified On*</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MSD Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Non_CRM_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non CRM Referred By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WT_Employee__c.WT_User_Exist__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>WT_Employee__c.WT_Employee_Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WT_Employee__c</referenceTo>
        <relationshipLabel>Leads &amp; Referrals</relationshipLabel>
        <relationshipName>Leads_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Non_CRM_Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-CRM Referred To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WT_Employee__c.WT_User_Exist__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>WT_Employee__c.WT_Employee_Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WT_Employee__c</referenceTo>
        <relationshipLabel>Leads &amp; Referrals (Non-CRM Referred To)</relationshipLabel>
        <relationshipName>Leads_Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Preferred_Contact_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Contact Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Preferred_Followup_Method__c</fullName>
        <label>Preferred Follow-up Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By email</fullName>
                </value>
                <value>
                    <fullName>By mail</fullName>
                </value>
                <value>
                    <fullName>By phone</fullName>
                </value>
                <value>
                    <fullName>In person</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Product_Category__c</fullName>
        <formula>SUBSTITUTE(
IF ( INCLUDES (WT_Product_Type__c, &quot;Checking&quot; ), &quot;Checking, &quot;,null ) &amp;
IF (OR(
INCLUDES (WT_Product_Type__c, &quot;MMA/SAV&quot;),
INCLUDES (WT_Product_Type__c, &quot;Time Deposit&quot;)
), &quot;Other Deposit, &quot;,null ) &amp;
IF (OR(
INCLUDES (WT_Product_Type__c, &quot;Mortgage&quot;),
INCLUDES (WT_Product_Type__c, &quot;Line of Credit&quot;),
INCLUDES (WT_Product_Type__c, &quot;Home Equity&quot;),
INCLUDES (WT_Product_Type__c, &quot;Other Loan&quot;),
INCLUDES (WT_Product_Type__c, &quot;SBL&quot;)
), &quot;Loan, &quot;,null ) &amp;
IF ( ISBLANK (WT_Product_Type__c), &quot;Unstated, &quot;,null)&amp;&quot;.&quot;,&quot;, .&quot;,null)</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Product_Type__c</fullName>
        <description>This field tracks what product the prospective customer is interested in.
2827: Converted to Multipicklist</description>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>MMA/SAV</fullName>
                </value>
                <value>
                    <fullName>Time Deposit</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Home Equity</fullName>
                </value>
                <value>
                    <fullName>Other Loan</fullName>
                </value>
                <value>
                    <fullName>SBL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Purpose_Investment__c</fullName>
        <label>Purpose of Investment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>College Education</fullName>
                </value>
                <value>
                    <fullName>Death Benefits</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Wealth Preservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Referral_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Factor Location</label>
        <referenceTo>WT_Business_Unit_Entity__c</referenceTo>
        <relationshipLabel>Leads &amp; Referrals</relationshipLabel>
        <relationshipName>Leads_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Referred_By_Charter__c</fullName>
        <description>This is formula field created for reporting purpose</description>
        <formula>FinServ__ReferredByUser__r.Division</formula>
        <label>Referred By Charter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Referred_by_Me_My_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred by Me/My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Group Referrals</relationshipLabel>
        <relationshipName>RG_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Not Qualified – Other</fullName>
                </value>
                <value>
                    <fullName>Not Qualified – Duplicate</fullName>
                </value>
                <value>
                    <fullName>Qualified - Appointment Kept</fullName>
                </value>
                <value>
                    <fullName>Qualified - Sale Made</fullName>
                </value>
                <value>
                    <fullName>Qualified - Sale in Process</fullName>
                </value>
                <value>
                    <fullName>Qualified - No Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_WM_Professional__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WM Professional</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Wealth_Amount__c</fullName>
        <label>Private Client Group Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Wealth_Services_Type__c</fullName>
        <label>Private Client Group Services Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Investments - Great Lakes Advisors</fullName>
                </value>
                <value>
                    <fullName>Investments - Wayne Hummer</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Trust - Chicago Trust Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified - Not Converted,Qualified - Converted,Not Qualified</value>
        </filters>
        <label>All Open Referrals</label>
    </listViews>
    <listViews>
        <fullName>Date_Paid</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>WT_Date_Paid__c</columns>
        <columns>WT_Date_Qualified__c</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WT_Date_Qualified__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>WT_Date_Paid__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>FinServ__ExpressedInterest__c</field>
            <operation>equals</operation>
            <value>Wintrust Wealth Management</value>
        </filters>
        <label>Date Paid</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_I_Created</fullName>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified - Not Converted,Qualified - Converted,Not Qualified</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified - Not Converted,Qualified - Converted,Not Qualified</value>
        </filters>
        <filters>
            <field>WT_Created_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Non_CRM_Referred_By__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>WT_Non_CRM_Referred_To__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New - Not Contacted,New - Overdue,Working - Contacted</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Non_CRM_Referred_By__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>WT_Non_CRM_Referred_To__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>WT_Created_To_Me__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified - Not Converted,Qualified - Converted,Not Qualified</value>
        </filters>
        <filters>
            <field>WT_Created_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>Not_Qualified_from_Azwoir</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinServ__ReferredByUser__c</field>
            <operation>contains</operation>
            <value>Azwoir</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Not Qualified</value>
        </filters>
        <label>Not Qualified from Azwoir</label>
        <sharedTo>
            <group>WWM_Azwoir</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Qualified_from_Bentler</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinServ__ReferredByUser__c</field>
            <operation>equals</operation>
            <value>Peter Bentler</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Not Qualified</value>
        </filters>
        <label>Not Qualified from Bentler</label>
        <sharedTo>
            <group>WWM_Bentler</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Qualified_from_Bruskin</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinServ__ReferredByUser__c</field>
            <operation>equals</operation>
            <value>David Bruskin</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Not Qualified</value>
        </filters>
        <label>Not Qualified from Bruskin</label>
        <sharedTo>
            <group>WWM_Bruskin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Qualified_from_Claiborne</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinServ__ReferredByUser__c</field>
            <operation>equals</operation>
            <value>Sean Claiborne</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Not Qualified</value>
        </filters>
        <label>Not Qualified from Claiborne</label>
        <sharedTo>
            <group>WWM_Claiborne</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Qualified_from_Croghan</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>WT_Date_Referred__c</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>WT_Referred_To__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinServ__ReferredByUser__c</field>
            <operation>equals</operation>
            <value>Thomas Croghan</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Not Qualified</value>
        </filters>
        <label>Not Qualified from Croghan</label>
        <sharedTo>
            <group>WWM_Croghan</group>
        </sharedTo>
    </listViews>
</CustomObject>